--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "JohnnyCache"]
 	path = JohnnyCache
 	url = https://github.com/BLepers/JohnnyCache.git
+[submodule "gperftools"]
+	path = gperftools
+	url = https://github.com/gperftools/gperftools.git
